Fix gap for place with small width

--- a/blocks/place/place.css
+++ b/blocks/place/place.css
@@ -22,6 +22,6 @@
   .place {
     grid-template-columns: auto;
     padding-bottom: 50px;
-    column-gap: 32px;
+    gap: 32px;
   }
 }
